<resources>
    <string name="app_name">Short Report</string>
    <string name="main_page_title">The Short Report</string>
    <string name="action_settings">Settings</string>
    <string name="shorts_button">Can I wear shorts?</string>
    <string name="title_activity_some_activiity">SomeActiviity</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="settings_temperature_title">Temperature Settings</string>
    <string name="settings_temperature_summary">Set your temperature range</string>
    <string name="settings_rain_title">Rain</string>
    <string name="settings_rain_summary">Set your rain settings</string>
    <string name="checkbox_rain_title">Check if rain makes you avoid shorts</string>
</resources>
